feat(core): improved layout, added footer, added logic for generating truth table, expression trees and logic

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#fff" />
-    <title>React Typescript Starter</title>
+    <title>Truth Table Generator</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-background font-sans subpixel-antialiased scroll-smooth">
+    <div class="flex flex-col min-h-screen" id="root"></div>
     <script src="/src/index.tsx" type="module"></script>
   </body>
 </html>
